<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.hortonworks</groupId>
    <artifactId>hive-warehouse-connector</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <!-- dependencies and plugin versions -->
        <arrow.version>0.8.0</arrow.version>
        <commons.dbcp2.version>2.1</commons.dbcp2.version>
        <hadoop.version>2.7.3.2.6.4.0-91</hadoop.version>
        <hive.version>3.0.0.3.0.0.0-1371</hive.version>
        <jackson.version>2.6.5</jackson.version>
        <jline.version>2.12.1</jline.version>
        <junit.version>4.11</junit.version>
        <junit.interface.version>0.11</junit.interface.version>
        <log4j2.version>2.10.0</log4j2.version>
        <scala.version>2.11.8</scala.version>
        <scala.test.version>2.2.6</scala.test.version>
        <scala.binary.version>2.11</scala.binary.version>
        <spark.version>2.3.0</spark.version>
        <tez.version>0.9.1</tez.version>
        <thrift.version>0.9.3</thrift.version>
        <maven.compiler.plugin.version>3.6.1</maven.compiler.plugin.version>
        <maven.scala.plugin.version>3.2.2</maven.scala.plugin.version>
        <maven.shade.plugin.version>3.1.0</maven.shade.plugin.version>
        <maven.surefire.plugin.version>2.21.0</maven.surefire.plugin.version>

        <!-- miscellaneous java properties -->
        <MaxPermGen>512m</MaxPermGen>
        <CodeCacheSize>512m</CodeCacheSize>
        <java.version>1.8</java.version>
        <minJavaVersion>1.8</minJavaVersion>
        <maxJavaVersion>1.8</maxJavaVersion>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_2.11</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.hive</groupId>
                    <artifactId>hive-exec</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-dbcp2</artifactId>
            <version>${commons.dbcp2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_2.11</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.hive</groupId>
                    <artifactId>hive-exec</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-yarn_2.11</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-catalyst_2.11</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-hive_2.11</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.spark-project.hive</groupId>
                    <artifactId>hive-exec</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>jline</groupId>
            <artifactId>jline</artifactId>
            <version>${jline.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-vector</artifactId>
            <version>${arrow.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hive</groupId>
            <artifactId>hive-llap-ext-client</artifactId>
            <version>${hive.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hive</groupId>
            <artifactId>hive-streaming</artifactId>
            <version>${hive.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.tez</groupId>
            <artifactId>tez-runtime-internals</artifactId>
            <version>${tez.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-common</artifactId>
            <version>${hadoop.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-yarn-registry</artifactId>
            <version>${hadoop.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-mapreduce-client-core</artifactId>
            <version>${hadoop.version}</version>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.novocode</groupId>
            <artifactId>junit-interface</artifactId>
            <version>${junit.interface.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_2.11</artifactId>
            <version>${scala.test.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>${minJavaVersion}</source>
                    <target>${minJavaVersion}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>${maven.scala.plugin.version}</version>
                <executions>
                    <execution>
                        <id>scala-compile-first</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>add-source</goal>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>scala-test-compile</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <scalaVersion>${scala.version}</scalaVersion>
                    <recompileMode>incremental</recompileMode>
                    <useZincServer>true</useZincServer>
                    <checkMultipleScalaVersions>false</checkMultipleScalaVersions>
                    <args>
                        <arg>-unchecked</arg>
                        <arg>-deprecation</arg>
                        <arg>-feature</arg>
                    </args>
                    <jvmArgs>
                        <jvmArg>-Xms1024m</jvmArg>
                        <jvmArg>-Xmx1024m</jvmArg>
                        <jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>
                        <jvmArg>-XX:ReservedCodeCacheSize=${CodeCacheSize}</jvmArg>
                    </jvmArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven.shade.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>false</minimizeJar>
                            <shadedArtifactAttached>false</shadedArtifactAttached>
                            <outputFile>${project.build.directory}/${project.artifactId}-assembly-${project.version}.jar</outputFile>
                            <relocations>
                                <relocation>
                                    <pattern>com.google.guava</pattern>
                                    <shadedPattern>shadeguava.com.google.guava</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>io.netty</pattern>
                                    <shadedPattern>shadenetty.io.netty</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.apache.curator</pattern>
                                    <shadedPattern>shadecurator.org.apache.curator</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.apache.derby</pattern>
                                    <shadedPattern>shadederby.org.apache.derby</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.apache.hive</pattern>
                                    <shadedPattern>shadehive.org.apache.hive</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.apache.hadoop.hive</pattern>
                                    <shadedPattern>shadehive.org.apache.hadoop.hive</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.apache.orc</pattern>
                                    <shadedPattern>shadeorc.org.apache.orc</shadedPattern>
                                </relocation>
                            </relocations>
                            <artifactSet>
                                <includes>
                                    <include>au.com.bytecode:*</include>
                                    <include>com.google.protobuf:*</include>
                                    <include>com.fasterxml.jackson:*</include>
                                    <include>commons-codec:*</include>
                                    <include>commons-lang:*</include>
                                    <include>commons-logging:*</include>
                                    <include>com.zaxxer:*</include>
                                    <include>io.airlift:*</include>
                                    <include>javax:*</include>
                                    <include>jodd:*</include>
                                    <include>org.apache.arrow:*</include>
                                    <include>org.apache.calcite:*</include>
                                    <include>org.apache.commons:*</include>
                                    <include>org.apache.avro:*</include>
                                    <include>org.apache.hadoop:*</include>
                                    <include>org.apache.tez:*</include>
                                    <include>org.apache.hadoop.hive:*</include>
                                    <include>org.apache.hive:*</include>
                                    <include>org.apache.httpcomponents:*</include>
                                    <include>org.codehaus.jackson:*</include>
                                    <include>org.joda:*</include>
                                    <include>org.slf4j:*</include>
                                </includes>
                            </artifactSet>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                        <exclude>webapps/</exclude>
                                        <exclude>static/</exclude>
                                        <exclude>hive-webapps/</exclude>
                                        <exclude>hbase-webapps/</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                    <resource>reference.conf</resource>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
                                    <resource>log4j.properties</resource>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer"/>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer"/>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <reuseForks>false</reuseForks>
                    <argLine>-Xmx2048m</argLine>
                    <failIfNoTests>false</failIfNoTests>
                    <systemPropertyVariables>
                        <test.tmp.dir>${test.tmp.dir}</test.tmp.dir>
                        <example.dir>${example.dir}</example.dir>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>